--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,38 @@
 }
 
 /* Positioning Classes */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
+.wrapper {
+    width: 960px;
+    margin: 0 auto;
+}
+
+.col-1 {
+  float: left;
+  width: 33%;
+  border: 5em;
+  padding-right:2em;
+  padding-bottom: 2em;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+  border: 5em;
+  padding-right: 2em;
+  padding-bottom: 1px;
+}
+
+.first {
+  margin-left: 0;
+
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
 
