--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,107 @@
 }
 
 /* Positioning Classes */
+.col-1{
+  float:left;
+}
 
+.col-2{
+  float:left;
+  width:66%;
+}
 
+.col-3{
+  float: left;
+}
+
+.row-2{
+  /* width: 34%; */
+  height: auto;
+}
+
+section:last-child{
+  float:right;
+}
+
+.border_right {
+    border-right: 1px dotted #ccc;
+    float: left;
+    margin-right: 13px;
+    width: 33%;
+}
+
+#archive{
+  margin-bottom: 10px;
+  margin-left: 2%;
+  margin-top: 0;
+  width: 32%;
+}
+
+#deals {
+  text-align: justify;
+  clear:both;
+  padding-top:10px;
+}
+
+#deals > div {
+  width: 32%;
+  display: inline-block;
+  vertical-align: top;
+
+  /* IE fix. */
+  *display: inline;
+  zoom: 1;
+}
+
+#deals:after {
+  content: "";
+  width: 100%;
+  display: inline-block;
+}
+/*=======================================*/
+
+/* .steps {
+  background: white;
+}
+.grass {
+  float: left;
+  width: 64%;
+  box-shadow: 0 3px 10px #333;
+  background: white;
+  height: 2%;
+}
+.arch {
+  float: right;
+  width: 31%;
+  box-shadow: 0 3px 10px #333;
+  background: white;
+  height: 2%;
+} */
+      /* float: right;
+      width:  33.333%%;
+      margin-left: 2%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      box-shadow: 0 3px 10px #333;
+      background: white;
+    }*/
+/* .col-1 {
+  margin-top: 2%;
+  margin-left: 2%;
+  float: left;
+  width: 32%;
+  background: #fff;
+}
+.col-2 {
+  float: left;
+  width: 66%;
+  background: #fff;
+}
+.col-3 {
+ background: #fff;
+}
+.first {
+  margin-right: 0;
+}
+[class*="col-"] {
+margin-left: 2%; /*gives 2% margin in things that say col- */
