--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,24 @@
 }
 
 /* Positioning Classes */
+.col-1 {
+  width: 66%;
+}
 
+.col-2 {
+  width: 32%;
+}
 
+[class*="col-"] {
+    float: left;
+    margin-left: 2%;
+}
+
+.row {
+    clear: both;
+    margin-bottom: 2%;
+}
+
+[class*="col-"]:first-child {
+    margin-left: 0;
+}
