--- a/css/layout.css
+++ b/css/layout.css
@@ -24,4 +24,27 @@
 
 /* Positioning Classes */
 
+.wrapper {
+  
+  
+}
 
+.col-1 {
+  float: left;
+  width: 32%;
+}
+.col-2 {
+  float: left;
+  width: 66%;
+}
+[class*="col-"] {
+  margin-right: 2%;
+}
+
+.last {
+  margin-right: 0%;
+}
+
+.gap {
+  margin-bottom: 20px;
+}
